# LLM-Model-Selection-API

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  ui.py
app/: api.py  classifier.py  config.py  main.py  schemas.py
