[project]
name = "model-select-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.127.0",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.52.2",
    "requests>=2.32.0",
]
